unpackaged/objects/Promotion_Material__c.object
<CustomObject>
  <description>used in DE! Manuell import. Used to inform salesteam about promotion material orders and tracking material costs</description>
  <fields>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promotion Material</relationshipLabel>
    <relationshipName>Promotion_Material</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Article_Name__c</fullName>
    <label>Article Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Delivery_Note__c</fullName>
    <label>Delivery Note</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Entry_Date__c</fullName>
    <label>Entry Date</label>
    <required>true</required>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Orderer__c</fullName>
    <label>Orderer</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>Promotion Material</label>
  <nameField>
    <label>Article Number</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Promotion Material</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>